- Fixed overused div tags (replaced with a tags) - Redid styling to be easier to follow - Removed excess tabs in files (tab spacing is now size 2) - Properly coloured the background - Added highlighting of the emails - Added descriptive style comments -> GENERALLY CLEANED UP THE MESS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,79 +1,88 @@
-/*  
+/*
  *  This css file is used across the website. It is broken down into headings:
- *  General Formatting, Aligning, Sizing, and Buttons.
+ *  Entire website, email boxes, forms, and other.
  *  author: Justin Gray (A00426753)
 */
 
 /*
-    GENERAL FORMATTING
+  Entire website.
 */
-.bolded {
-    font-weight: bold;
-}
 
-.underlined {
-    text-decoration: underline;
-}
-
+/* Sets the proper width of the website. */
 body {
-    background-color:#f8f9fa;
+  width: 900px;
+}
+
+/* The main content of each page styled as such. */
+.content {
+  background-color: #f0f2f4;
 }
 
 /*
-    ALIGNING
+  Email boxes.
 */
-.align-right {
-    text-align: right;
-    padding: 0.375rem 0.75rem;
+
+/* Represents styling for an email in a list of emails. */
+.email {
+  padding: 1rem 0.75rem;
+  line-height: 1.5;
 }
 
-.align-left {
-    text-align: left;
-    padding: 0.375rem 0.75rem;
+/* Changes to the email styling when you're hovering over it. */
+.email:hover {
+  cursor: pointer;
+  background-color: #e1e6ea;
+}
+
+/* An email tile (to/from or subject) which has been read */
+.email_read {
+  width: 400px;
+  display: inline-block;
+}
+
+/* An email tile (to/from or subject) which hasn't been read */
+.email_unread {
+  width: 400px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+/* An email tile title. */
+.email_title {
+  width: 400px;
+  font-weight: bold;
+  text-decoration: underline !important;
+  display: inline-block;
+  padding: 1rem 0.75rem;
+  line-height: 1.5;
 }
 
 /*
-    SIZING
+  Forms.
 */
-.small {
-    display: inline-block;
-    width: 100px;
-}
 
-.medium {
-    display: inline-block;
-    width: 200px;
-}
-
-.wide {
-    display: inline-block;
-    width: 600px;
-}
-
-.mediumText {
-    font-size: 16px;
+/* The left column of any non-email-box page. */
+.title_column {
+  width: 60px;
+  text-align: right;
+  padding-right: 3px;
 }
 
 /*
-    BUTTONS
+  Other.
 */
-.clickable {
-    line-height: 1.75;
-    //padding-top: 10px;
-}
 
-.clickable:hover {
-    cursor: pointer;
-}
-
-.mybtn {
+/* A navigation button's styling */
+.navButton {
     width: 150px;
     text-align: center;
     font-weight: 600;
     background-color: lightgray;
     transition-duration: 0.4s;
-} 
+}
 
-.mybtn:hover {
+/* A navigation button's styling when hovering. */
+.navButton:hover {
     background-color: snow;
+    cursor: pointer;
 }
